[project]
name = "langgraph-chatapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ranger", email = "mnipk1243@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.6",
]

[project.scripts]
langgraph-chatapp = "langgraph_chatapp:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
